[package]
name = "echo_server_tokio_socketcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-socketcan-isotp = { git="https://github.com/japawBlob/tokio-socketcan-isotp" }
# tokio-socketcan-isotp = { path = "/home/deck/Codes/tokio-socketcan-isotp" }
